--- a/index.html
+++ b/index.html
@@ -98,27 +98,35 @@
              <ul class="team-list list">
                 <li class="team-item">
                    <img src="./images/img.jpg" alt="the man in the photo" width="264">
-                   <h3 class="about-top">Mark Guerrero</h3>
-                   <p class="about-bottom">Product Designer</p>
+                   <div class="box-content">
+                      <h3 class="about-top">Mark Guerrero</h3>
+                      <p class="about-bottom">Product Designer</p>
+                   </div>
                 </li>
  
                  <li class="team-item">
                    <img src="./images/img(1).jpg" alt="the man in the photo" width="264">
-                   <h3 class="about-top">Tom Ford</h3>
-                   <p class="about-bottom">Frontend Developer</p>
+                   <div class="box-content">
+                      <h3 class="about-top">Tom Ford</h3>
+                      <p class="about-bottom">Frontend Developer</p>
+                   </div >
                  </li>
  
                  <li class="team-item">
                    <img src="./images/img(2).jpg" alt="the girl in the photo" width="264">
-                   <h3 class="about-top">Camila Garcia</h3>
-                   <p class="about-bottom">Marketing</p>
+                   <div class="box-content">
+                      <h3 class="about-top">Camila Garcia</h3>
+                      <p class="about-bottom">Marketing</p>
+                   </div >
                 </li>
  
                 <li class="team-item">
                    <img src="./images/img(3).jpg" alt="the man in the photo" width="264">
-                   <h3 class="about-top">Daniel Wilson</h3>
-                   <p class="about-bottom">UI Designer</p>
-                </li>
+                   <div class="box-content">
+                      <h3 class="about-top">Daniel Wilson</h3>
+                      <p class="about-bottom">UI Designer</p>
+                   </li>
+                   </div >
              
                </ul>
  
